# E-commerce-Data-Pipeline-Customer-Intelligence

./: .gitignore  COMPLETION_SUMMARY.txt  Dockerfile  IMPLEMENTATION_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_README.md  README.md  docker-compose.yml  pyproject.toml  rfm_analysis.py
.github/workflows/: ci.yml
dags/: olist_etl_dag.py
data/processed/: rfm_segment_stats.csv
data/processed/dwh/: agg_monthly_revenue.csv  agg_product_metrics.csv  dim_sellers.csv  dim_time.csv
data/processed/staging/: raw_products.csv
great_expectations/: great_expectations.yml
notebooks/: 1_EDA_schema_exploration.ipynb  2_RFM_Segmentation.ipynb
reports/: INSIGHTS_AND_RECOMMENDATIONS.md
scripts/: setup.py  verify_fresh_setup.py
src/: __init__.py  analytics_queries.py  api.py  config.py  data_modeling.py  data_warehouse_sql_upgraded.py  etl_pipeline.py  mlflow_tracking.py
tests/: data_quality_ge.py  test_etl.py  tmp_csv_test.csv  verify_db.py
