[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-data-analysis"
version = "0.1.0"
description = "Analysis of ecommerce missing values and volatility dynamics"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "missingno>=0.5.2",      # For the nullity inspections we just wrote
    "scikit-learn>=1.2.0",   # For imputation (KNN/MICE)
    "statsmodels>=0.14.0",   # For GARCH and econometric modeling
    "textblob>=0.17.0",      # Sentiment analysis
    "langdetect>=1.0.9",     # Language detection
    "emoji>=2.2.0",          # Emoji counting
    "nltk>=3.8.0",         # Alternative for more advanced NLP
    "sqlalchemy>=2.0.0",          # ORM + Core SQL expression language
    "psycopg2-binary>=2.9.0",     # PostgreSQL adapter for Python (binary wheels)
    "psycopg>=3.1.0",  # Newer version, but may need compilation
    "pytest>=9.0.3",
    "jupyter>=1.1.1",
]
requires-python = "==3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipykernel",             # To run in Jupyter notebooks
]
mlops = [
    "docker",
    "dvc",
    "mlflow",
    "dagshub",               # Useful if you are using remote tracking
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]  # assert false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "missingno.*",
    "textblob.*",
    "langdetect.*",
    "emoji.*",
]
ignore_missing_imports = true
